chore: improved naming
